# rapace

./: Cargo.toml
crates/rapace/: CHANGELOG.md  Cargo.toml
crates/rapace-cell/: CHANGELOG.md  Cargo.toml
crates/rapace-cell/src/: lib.rs
crates/rapace-core/: CHANGELOG.md  Cargo.toml
crates/rapace-core/src/: frame.rs  handle.rs  lib.rs  session.rs  transport.rs
crates/rapace-core/src/transport/: websocket.rs
crates/rapace-introspection/: CHANGELOG.md
crates/rapace-macros/: CHANGELOG.md
crates/rapace-macros/src/: lib.rs
crates/rapace-registry/: CHANGELOG.md
crates/rapace-testkit/: CHANGELOG.md  Cargo.toml
crates/rapace-testkit/src/: bidirectional.rs  lib.rs
crates/rapace-tracing/: CHANGELOG.md
crates/rapace-tracing/src/: lib.rs
crates/rapace-transport-mem/: CHANGELOG.md
crates/rapace-transport-mem/src/: lib.rs
crates/rapace-transport-shm/: CHANGELOG.md
crates/rapace-transport-shm/src/: alloc.rs  hub_transport.rs  transport.rs
crates/rapace-transport-stream/: CHANGELOG.md
crates/rapace-transport-stream/src/: lib.rs
crates/rapace-transport-websocket/: CHANGELOG.md
crates/rapace-transport-websocket/src/: handle.rs  lib.rs
crates/rapace-wasm-client/src/: lib.rs
crates/rapace/examples/: basic.rs
crates/rapace/src/: lib.rs  session.rs
demos/browser-tests-server/src/: main.rs
demos/dashboard/src/: main.rs
demos/diagnostics-over-rapace/src/: helper.rs  main.rs
demos/http-over-rapace/src/: helper.rs  main.rs
demos/http-tunnel/src/: host.rs  host_bin.rs  main.rs  plugin.rs  plugin_bin.rs
demos/http-tunnel/tests/: integration.rs
demos/shm-image/src/: main.rs
demos/template-engine/src/: helper.rs  lib.rs  main.rs
demos/tracing-over-rapace/src/: helper.rs  main.rs
examples/tracing_over_rapace/src/: helper.rs
