[package]
name = "rapace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance RPC framework with shared memory transport"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
tracing = { workspace = true }
# Core types and traits
rapace-core = { workspace = true }

# Proc macros (re-exported as #[rapace::service])
rapace-macros = { workspace = true }

# Registry for service/method metadata
rapace-registry = { workspace = true }

# Serialization
facet = { workspace = true }
facet-core = { workspace = true }
facet-postcard = { workspace = true }
futures = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["net", "io-util"], optional = true }
parking_lot.workspace = true

# Cross-platform time (works on WASM)
web-time.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }

[features]
default = ["mem", "stream", "shm"]

# Transport features
mem = ["rapace-core/mem"]
stream = ["rapace-core/stream", "dep:tokio"]
websocket = ["rapace-core/websocket"]
shm = ["rapace-core/shm"]

# All transports
full = ["mem", "stream", "websocket", "shm"]
